minor dark mode hover style fix

--- a/src/styles/_darkmode.scss
+++ b/src/styles/_darkmode.scss
@@ -111,6 +111,10 @@ $theme-input-border: #242424;
                 background: $theme-cell-empty;
                 border-color: $theme-cell-empty;
             }
+
+            &.empty:hover {
+                background: $theme-item-background-color-hover;
+            }
         }
     }
 
